src/Styles/Global/index.scss
@use './colors'as *;

html,body {

  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  // -webkit-font-smoothing: antialiased;
  // -moz-osx-font-smoothing: grayscale;

  margin: 0;
  padding: 0;
  top: 0;
  left: 0;
  display: block;
  box-sizing: border-box;
  width: 100vw;
  overflow-x: hidden;
  overflow-y: scroll;
  // max-height: 1200px;
  // background-color: $background-color;
  
  scrollbar-width: none;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

